# fintual_devops_interview

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Makefile  NOTES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: antes.json  bench.py  despues.json
blog/: api.py  models.py
blog/migrations/: 0002_performance.py
blog/tests/: test_posts.py
core/: health.py  observability.py  settings.py  urls.py
docs/: COMO-SE-CONSTRUYO.md  architecture.md
docs/adr/: 0001-pagination.md  0002-postgres-fts.md  0003-gunicorn-over-asgi.md  0004-observability-stack.md  0005-migration-as-k8s-job.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  migrate-job.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  migrate-job.yaml  secret.example.yaml  service.yaml
