[project]
name = "backend-devops-interview"
version = "0.1.0"
description = "Small content service: users, posts, comments, tags."
requires-python = ">=3.14"
dependencies = [
    "django>=5.2,<5.3",
    "django-ninja>=1.5,<2",
    "psycopg[binary]>=3.3,<4",
    "faker>=30",
    "gunicorn>=26.0.0",
    "whitenoise>=6.12.0",
    "django-prometheus>=2.5.0",
    "python-json-logger>=4.1.0",
    "dj-database-url>=3.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-django>=4.11",
    "ruff>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Las migraciones son autogeneradas por Django: no las formateamos a mano.
"*/migrations/*" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py"]
